2007-06-01  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): 1.5.5 for the SAVEATONCE option, very
	necessary for OneNAND stored environment. 

	* src/lib/env.c: New option, CONFIG_ENV_SAVEATONCE implements a
	cached environment that is saved at one time to non-volatile
	storage instead of through incremental updates.  This is necessary
	for some types of NAND flash where multiple writes to the same
	page are limited.

	* src/apex/*.c: Groomed error reporting for opening regions.

	* src/lib/env.c: Changed the environment region descriptor name to
	d_env so that it is easier to remember.

2007-05-30  Marc Singer  <elf@cerise.buici.com>

	* Makefile (SUBLEVEL): 1.5.4.  Rolling revision for the sake of
	the xscale fixes.

	* src/mach-mx3/cmd-sleep.c (cmd_sleep): Test code for MX31 sleep
	modes.

	* src/mach-mx3/cmd-reset.c (cmd_reset): Command verified.

	* src/arch-arm/entry/reset.c: Added a jump to reset_exit() from
	reset() in the event that we disable the MMU at startup.  The
	ixp42x needs this because the xscale MMU flush code allocates data
	in the text section.

	* src/mach-ixp42x/initialize-sdram.c (cmd_initialize_sdram): Fixed
	the scan of 256Mib SDRAM chips.  A small change to the algorithm
	and we seem to be able to detect 64MiB of memory just fine.

	* src/drivers/drv-mem.c (cmd_memscan): Error detection for region
	too small.

2007-05-24  Marc Singer  <elf@buici.com>

	* src/drivers/driver.c (parse_descriptor): Unparseable regions
	will now generate an error.

	* src/apex/cmd-version.c (cmd_version): Added a message about the
	currently set variation.

2007-05-24  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): 1.5.3.  Rolling rev for the sake of working
	IPU code, working sensor capture, and turing off of the
	illumination LEDs.

	* src/mach-mx3/ipu.c (cmd_ipu): Fixed the shutter width to
	increase frame rate.

	* src/mach-mx3/ipu.c (ipu_setup): Fixed the burst width to memory
	through the IPU DMAC.
